Fix leaks in idbKeyFromInspectorObject() https://bugs.webkit.org/show_bug.cgi?id=151179

Reviewed by Brian Burg.

Fix leaks in idbKeyFromInspectorObject() that were caused by the
NeverDestroyed<> not being marked as static.

* inspector/InspectorIndexedDBAgent.cpp:


Canonical link: https://commits.webkit.org/169368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192350 268f45cc-cd09-0410-ab3c-d52691b4dbfc